--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "v8.9.0",
+    "npm": "6.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack",
     "start": "webpack --mode=development --watch"
   },
   "repository": {
