--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-waypoint": "^8.0.3",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
